# Linguini

./: .codex  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  REPOSITORY_STATE.md
.github/workflows/: ci.yml  pages.yml  vscode-extension.yml
crates/linguini-analyzer/: Cargo.toml
crates/linguini-analyzer/src/: branch_coverage.rs  diagnostic.rs  expression.rs  lib.rs  locale.rs  message_coverage.rs  reference.rs  tests.rs
crates/linguini-analyzer/src/locale/: branches.rs  messages.rs
crates/linguini-analyzer/tests/: impl_coverage.rs
crates/linguini-cldr/: Cargo.toml  build.rs  cldr-json.toml
crates/linguini-cldr-macros/: Cargo.toml  cldr-json.toml
crates/linguini-cldr-macros/src/: formatting.rs  lib.rs  plural_rule.rs  source.rs  source_paths.rs
crates/linguini-cldr/src/: cache.rs  cache_tests.rs  data.rs  lib.rs  plural.rs  tests.rs
crates/linguini-cldr/src/data/: cache_loaders.rs  compiled.rs  json.rs  mod.rs  tests.rs
crates/linguini-cldr/src/plural/: eval.rs
crates/linguini-cli/: Cargo.toml
crates/linguini-cli/src/: lib.rs  main.rs  tests.rs
crates/linguini-cli/src/project/: check.rs  codegen.rs  fixes.rs  io.rs  mod.rs  sources.rs  util.rs
crates/linguini-cli/src/project/test_data/: mod.rs  render.rs
crates/linguini-cli/tests/: cli.rs
crates/linguini-codegen-js/: Cargo.toml
crates/linguini-codegen-js/src/: lib.rs  tests.rs
crates/linguini-codegen-rust/: Cargo.toml
crates/linguini-codegen-rust/src/: lib.rs  tests.rs
crates/linguini-codegen-ts/: Cargo.toml
crates/linguini-codegen-ts/src/: lib.rs  module.rs  plural.rs  tests.rs
crates/linguini-codegen-ts/src/module/: decl.rs  emit.rs  expr.rs  formatters.rs  mod.rs  names.rs  project.rs  shared.rs  svelte.rs  templates.rs  tree.rs
crates/linguini-codegen-ts/src/module/templates/: index.runtime.d.ts  index.runtime.ts  project-index.entry.d.ts  project-index.entry.ts  shared.runtime.ts  single-index.runtime.d.ts  single-index.runtime.ts  svelte.context.runtime.d.ts  svelte.context.runtime.ts  svelte.runtime.d.ts  svelte.runtime.ts  sveltekit.runtime.d.ts  sveltekit.runtime.ts  web.runtime.d.ts  web.runtime.ts
crates/linguini-codegen-ts/src/templates/: plural-operands.runtime.ts
crates/linguini-config/: Cargo.toml
crates/linguini-config/src/: discovery.rs  error.rs  lib.rs  model.rs  parser.rs  tests.rs
crates/linguini-core/: Cargo.toml
crates/linguini-core/src/: lib.rs
crates/linguini-format/: Cargo.toml
crates/linguini-format/src/: engine.rs  ir.rs  lib.rs  tests.rs
crates/linguini-ir/: Cargo.toml
crates/linguini-ir/src/: lib.rs  lower.rs  model.rs  reference.rs  tests.rs
crates/linguini-locale/: Cargo.toml
crates/linguini-locale/src/: lib.rs
crates/linguini-lsp/: Cargo.toml
crates/linguini-lsp/src/: code_action.rs  document.rs  lib.rs  server.rs  tests.rs
crates/linguini-lsp/src/document/: plural_hover.rs  sample.rs  symbols.rs  tokens.rs
crates/linguini-package/: Cargo.toml
crates/linguini-package/src/: lib.rs  tests.rs
crates/linguini-schema/: Cargo.toml
crates/linguini-schema/src/: lib.rs
crates/linguini-syntax/: Cargo.toml
crates/linguini-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  tests.rs  token.rs
crates/linguini-syntax/src/parser/: locale_parser.rs  locale_tests.rs
crates/linguini-syntax/src/tests/: common.rs  lexer.rs  mod.rs  parser.rs
crates/linguini-test-support/: Cargo.toml
crates/linguini-test-support/src/: lib.rs
docs/: checklist.md  getting-started.md  reference.md  spec-migrate-syntax.md  spec.md  testing.md  web-sveltekit.md  why.md
docs/examples/: sveltekit-locale-provider.md
editors/vscode/: .gitignore  .vscodeignore  README.md  language-configuration.json  package-lock.json  package-lock.json.orig  package.json  package.json.orig  pnpm-lock.yaml
editors/vscode/sample-workspace/: en.lgl  example.lgs  linguini.toml
editors/vscode/sample-workspace/linguini/schema/: shop.lgs
editors/vscode/scripts/: build-server.js  open-extension-host.js  package-vsix.js
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: linguini-locale.tmLanguage.json  linguini-schema.tmLanguage.json  markdown-linguini-locale.tmLanguage.json  markdown-linguini-schema.tmLanguage.json
plugins/vite/: README.md  package.json  pnpm-lock.yaml
plugins/vite/src/: index.d.ts  index.js
plugins/vite/test/: plugin.test.mjs
scripts/: check-file-size.sh  check-spec-gates.sh  check-syntax-fixtures.sh  check-unit-test-structure.sh  coverage.sh  fetch-cldr-json.sh  find-repeated-patterns.py  release-packages.py  review-snapshots.sh  validate-generated-js.sh  validate-generated-rust.sh  validate-generated-ts.sh
site/: .gitignore  README.md  linguini.toml  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
site/linguini/locale/main/: de.lgl  en.lgl  es.lgl  fr.lgl  it.lgl  pt-BR.lgl  pt.lgl  ru.lgl  zh.lgl
site/linguini/schema/: main.lgs
site/scripts/: configure-github-pages.mjs
site/src/: app.html  hooks.server.ts  hooks.ts
site/src/lib/: linguini.ts
site/src/lib/components/: button.svelte  code-block.svelte
site/src/lib/server/: highlight.ts
site/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
site/src/styles/: app.css
tests/fixtures/golden/locale/: ru.lgl
tests/fixtures/golden/projects/basic/: linguini.toml
tests/fixtures/golden/schema/: shop.lgs  shop.lqs
tests/fixtures/golden/snapshots/: codegen-ts-module-ru.ts  codegen-ts-plural-ru.ts  diagnostic-schema-syntax.txt  ir-locale-ru.txt  ir-schema-shop.txt  lexer-locale.tokens  lexer-schema.tokens
tests/fixtures/golden/snapshots/js/: index.js  shared.js
tests/fixtures/golden/snapshots/rust/: Cargo.toml
tests/fixtures/golden/snapshots/ts/: index.ts  (+5 more)
tests/fixtures/golden/snapshots/ts-runtime/: index.ts
tests/fixtures/golden/syntax/: all.lgl  all.lgs
tests/fixtures/invalid/locale/: broken-annotation.lgl  broken-function-branch.lgl  broken-impl-brace.lgl  broken-placeholder.lgl
tests/fixtures/invalid/schema/: missing-enum-brace.lgs  missing-message-paren.lgs  missing-type-target.lgs
(+10 files in other folders)
