[workspace]
resolver = "2"
members = [
  "crates/linguini-analyzer",
  "crates/linguini-cldr",
  "crates/linguini-cldr-macros",
  "crates/linguini-cli",
  "crates/linguini-codegen-ts",
  "crates/linguini-config",
  "crates/linguini-core",
  "crates/linguini-format",
  "crates/linguini-ir",
  "crates/linguini-locale",
  "crates/linguini-lsp",
  "crates/linguini-schema",
  "crates/linguini-syntax",
  "crates/linguini-test-support",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/antepodeum/Linguini"
rust-version = "1.76"

[workspace.metadata.linguini.planned_dependencies]
cli = ["clap"]
config = ["serde", "toml"]
json = ["serde_json"]
parser = ["chumsky"]
diagnostics = ["ariadne", "thiserror"]
paths = ["camino"]
discovery = ["ignore", "globwalk"]
maps = ["indexmap"]
macros = ["syn", "quote"]
lsp = ["tower-lsp-server", "lsp-types", "tokio"]
tests = ["insta", "assert_cmd", "predicates", "tempfile", "proptest"]
tracing = ["tracing", "tracing-subscriber"]
