[package]
name = "linguini-analyzer"
version = "0.1.0-alpha.4"
description = "Semantic diagnostics for Linguini schema and locale files"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ariadne = "0.6.0"
linguini-syntax = { path = "../linguini-syntax", version = "0.1.0-alpha.4" }
