[package]
name = "linguini-cldr-macros"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
linguini-cldr = { path = "../linguini-cldr" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing"] }

[dev-dependencies]
linguini-test-support = { path = "../linguini-test-support" }
