[package]
name = "linguini-cldr"
build = "build.rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
linguini-test-support = { path = "../linguini-test-support" }

[build-dependencies]
serde_json = "1.0.149"
