[package]
name = "linguini-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "linguini"
path = "src/main.rs"

[dependencies]
linguini-analyzer = { path = "../linguini-analyzer" }
linguini-cldr = { path = "../linguini-cldr" }
linguini-config = { path = "../linguini-config" }
linguini-syntax = { path = "../linguini-syntax" }

[dev-dependencies]
assert_cmd = "2.1.2"
linguini-test-support = { path = "../linguini-test-support" }
predicates = "3.1.4"
tempfile = "3.27.0"
