[package]
name = "linguini-cli"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "linguini"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
linguini-analyzer = { path = "../linguini-analyzer" }
linguini-cldr = { path = "../linguini-cldr" }
linguini-codegen-ts = { path = "../linguini-codegen-ts" }
linguini-config = { path = "../linguini-config" }
linguini-format = { path = "../linguini-format" }
linguini-ir = { path = "../linguini-ir" }
linguini-lsp = { path = "../linguini-lsp" }
linguini-syntax = { path = "../linguini-syntax" }

[dev-dependencies]
assert_cmd = "2.1.2"
linguini-test-support = { path = "../linguini-test-support" }
predicates = "3.1.4"
tempfile = "3.27.0"
