[package]
name = "linguini-cli"
version = "0.1.0-alpha.3"
description = "Command-line interface for Linguini localization projects"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "linguini"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
linguini-analyzer = { path = "../linguini-analyzer", version = "0.1.0-alpha.3" }
linguini-cldr = { path = "../linguini-cldr", version = "0.1.0-alpha.3" }
linguini-codegen-ts = { path = "../linguini-codegen-ts", version = "0.1.0-alpha.3" }
linguini-config = { path = "../linguini-config", version = "0.1.0-alpha.3" }
linguini-format = { path = "../linguini-format", version = "0.1.0-alpha.3" }
linguini-ir = { path = "../linguini-ir", version = "0.1.0-alpha.3" }
linguini-lsp = { path = "../linguini-lsp", version = "0.1.0-alpha.3" }
linguini-syntax = { path = "../linguini-syntax", version = "0.1.0-alpha.3" }

[dev-dependencies]
assert_cmd = "2.1.2"
linguini-test-support = { path = "../linguini-test-support" }
predicates = "3.1.4"
tempfile = "3.27.0"
