[package]
name = "linguini-codegen-ts"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
linguini-cldr = { path = "../linguini-cldr" }
linguini-ir = { path = "../linguini-ir" }

[dev-dependencies]
linguini-syntax = { path = "../linguini-syntax" }
