[package]
name = "linguini-codegen-ts"
version = "0.1.0-alpha.3"
description = "TypeScript code generator for Linguini localization projects"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
linguini-cldr = { path = "../linguini-cldr", version = "0.1.0-alpha.3" }
linguini-core = { path = "../linguini-core", version = "0.1.0-alpha.3" }
linguini-ir = { path = "../linguini-ir", version = "0.1.0-alpha.3" }

[dev-dependencies]
linguini-syntax = { path = "../linguini-syntax", version = "0.1.0-alpha.3" }
