[package]
name = "linguini-locale"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
linguini-analyzer = { path = "../linguini-analyzer" }
linguini-syntax = { path = "../linguini-syntax" }

[dev-dependencies]
linguini-test-support = { path = "../linguini-test-support" }
