[package]
name = "linguini-lsp"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
linguini-analyzer = { path = "../linguini-analyzer" }
linguini-cldr = { path = "../linguini-cldr" }
linguini-format = { path = "../linguini-format" }
linguini-syntax = { path = "../linguini-syntax" }
tokio = { version = "1.52.3", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp-server = "0.23.0"
