[package]
name = "linguini-lsp"
version = "0.1.0-alpha.3"
description = "Language server implementation for Linguini"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
linguini-analyzer = { path = "../linguini-analyzer", version = "0.1.0-alpha.3" }
linguini-cldr = { path = "../linguini-cldr", version = "0.1.0-alpha.3" }
linguini-config = { path = "../linguini-config", version = "0.1.0-alpha.3" }
linguini-format = { path = "../linguini-format", version = "0.1.0-alpha.3" }
linguini-syntax = { path = "../linguini-syntax", version = "0.1.0-alpha.3" }
tokio = { version = "1.52.3", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp-server = "0.23.0"
